--- a/cmsc100-group5-react-app/public/index.html
+++ b/cmsc100-group5-react-app/public/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Poppins&family=Space+Grotesk&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Clearance System</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
